--- a/17] Reset password /views/categoryTable.ejs
+++ b/17] Reset password /views/categoryTable.ejs
@@ -9,12 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon.png">
     <title>Matrix Template - The Ultimate Multipurpose admin template</title>
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/extra-libs/multicheck/multicheck.css">
-    <link href="assets/libs/datatables.net-bs4/css/dataTables.bootstrap4.css" rel="stylesheet">
-    <link href="dist/css/style.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/assets/extra-libs/multicheck/multicheck.css">
+    <link href="/assets/libs/datatables.net-bs4/css/dataTables.bootstrap4.css" rel="stylesheet">
+    <link href="/dist/css/style.min.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -88,21 +88,15 @@
                     <div class="col-12">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Admin Table</h5>
+                                <h5 class="card-title">Category Table</h5>
                             </div>
                             <div class="table-responsive">
                                 <table class="table table-hover table-bordered">
                                     <thead class="thead-dark">
                                         <tr>
                                             <th scope="col">#</th>
-                                            <th scope="col">Image</th>
-                                            <th scope="col">First name</th>
-                                            <th scope="col">Last name</th>
-                                            <th scope="col">Email</th>
-                                            <th scope="col">Password</th>
-                                            <th scope="col">Gender</th>
-                                            <th scope="col">City</th>
-                                            <th scope="col">Hobbies</th>
+                                            <th scope="col">Category image</th>
+                                            <th scope="col">Category name</th>
                                             <th scope="col" colspan="2">Actions</th>
                                         </tr>
                                     </thead>
@@ -110,16 +104,10 @@
                                         <% data.map((e, i) => { %>
                                             <tr>
                                                 <td><%= i + 1 %></td>
-                                                <td><img src="/<%= e.image %>" class="img-thumbnail" width="50" alt=""></td>
-                                                <td><%= e.firstName %></td>
-                                                <td><%= e.lastName %></td>
-                                                <td><%= e.email %></td>
-                                                <td><%= e.password %></td>
-                                                <td><%= e.gender %></td>
-                                                <td><%= e.city %></td>
-                                                <td><%= e.hobbies %></td>
-                                                <td><a href="/editAdmin/<%= e._id%>"><button class="btn btn-warning text-dark btn-sm">Edit</button></a></td>
-                                                <td><a href="/deleteAdmin/<%= e._id%>"><button onclick="return confirm('Are you sure you want to delete this user?')" class="btn btn-danger btn-sm">Delete</button></a></td>
+                                                <td><img src="/<%= e.categoryImage %>" class="img-thumbnail" width="50" alt=""></td>
+                                                <td><%= e.categoryName %></td>
+                                                <td><a href="/category/editCategory/<%= e._id%>"><button class="btn btn-warning text-dark btn-sm">Edit</button></a></td>
+                                                <td><a href="/category/deleteCategory/<%= e._id%>"><button onclick="return confirm('Are you sure you want to delete this user?')" class="btn btn-danger btn-sm">Delete</button></a></td>
                                             </tr>
                                         <% }) %>
                                     </tbody>
@@ -162,23 +150,23 @@
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
-    <script src="assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="/assets/libs/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
-    <script src="assets/libs/popper.js/dist/umd/popper.min.js"></script>
-    <script src="assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/assets/libs/popper.js/dist/umd/popper.min.js"></script>
+    <script src="/assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
-    <script src="assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
-    <script src="assets/extra-libs/sparkline/sparkline.js"></script>
+    <script src="/assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
+    <script src="/assets/extra-libs/sparkline/sparkline.js"></script>
     <!--Wave Effects -->
-    <script src="dist/js/waves.js"></script>
+    <script src="/dist/js/waves.js"></script>
     <!--Menu sidebar -->
-    <script src="dist/js/sidebarmenu.js"></script>
+    <script src="/dist/js/sidebarmenu.js"></script>
     <!--Custom JavaScript -->
-    <script src="dist/js/custom.min.js"></script>
+    <script src="/dist/js/custom.min.js"></script>
     <!-- this page js -->
-    <script src="assets/extra-libs/multicheck/datatable-checkbox-init.js"></script>
-    <script src="assets/extra-libs/multicheck/jquery.multicheck.js"></script>
-    <script src="assets/extra-libs/DataTables/datatables.min.js"></script>
+    <script src="/assets/extra-libs/multicheck/datatable-checkbox-init.js"></script>
+    <script src="/assets/extra-libs/multicheck/jquery.multicheck.js"></script>
+    <script src="/assets/extra-libs/DataTables/datatables.min.js"></script>
     <script>
         /****************************************
          *       Basic Table                   *
