commit product list and its end of the project for now

--- a/17] Reset password /views/partial/sidebar.ejs
+++ b/17] Reset password /views/partial/sidebar.ejs
@@ -11,12 +11,34 @@
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/adminTable" aria-expanded="false"><i class="mdi mdi-border-inside"></i><span class="hide-menu">Admin Tables</span></a></li>
                     </ul>
                 </li> 
+
                 <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-receipt"></i><span class="hide-menu">Category </span></a>
                     <ul aria-expanded="false" class="collapse  first-level">
                         <li class="sidebar-item"><a href="/category/categoryForm" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> Category form </span></a></li>
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/category/categoryTable" aria-expanded="false"><i class="mdi mdi-border-inside"></i><span class="hide-menu">Category Tables</span></a></li>
                     </ul>
-                </li>   
+                </li>  
+                
+                <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-receipt"></i><span class="hide-menu">Subcategory </span></a>
+                    <ul aria-expanded="false" class="collapse  first-level">
+                        <li class="sidebar-item"><a href="/subCategory/subCategoryForm" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> Subcategory form </span></a></li>
+                        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/subCategory/subCategoryTable" aria-expanded="false"><i class="mdi mdi-border-inside"></i><span class="hide-menu">Subcategory Tables</span></a></li>
+                    </ul>
+                </li>  
+
+                <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-receipt"></i><span class="hide-menu">Extra Category </span></a>
+                    <ul aria-expanded="false" class="collapse  first-level">
+                        <li class="sidebar-item"><a href="/extraCategory/extraCategoryForm" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> Extra Category form </span></a></li>
+                        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/extraCategory/extraCategoryTable" aria-expanded="false"><i class="mdi mdi-border-inside"></i><span class="hide-menu">Extra Category Tables</span></a></li>
+                    </ul>
+                </li> 
+
+                <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-receipt"></i><span class="hide-menu">Products</span></a>
+                    <ul aria-expanded="false" class="collapse  first-level">
+                        <li class="sidebar-item"><a href="/product/productForm" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> Product form </span></a></li>
+                        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/product/productTable" aria-expanded="false"><i class="mdi mdi-border-inside"></i><span class="hide-menu">Product Tables</span></a></li>
+                    </ul>
+                </li> 
             </ul>
         </nav>
         <!-- End Sidebar navigation -->
