--- a/17] Reset password /views/subCategoryTable.ejs
+++ b/17] Reset password /views/subCategoryTable.ejs
@@ -12,10 +12,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon.png">
     <title>Matrix Template - The Ultimate Multipurpose admin template</title>
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="/assets/libs/select2/dist/css/select2.min.css">
-    <link rel="stylesheet" type="text/css" href="/assets/libs/jquery-minicolors/jquery.minicolors.css">
-    <link rel="stylesheet" type="text/css" href="/assets/libs/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
-    <link rel="stylesheet" type="text/css" href="/assets/libs/quill/dist/quill.snow.css">
+    <link rel="stylesheet" type="text/css" href="/assets/extra-libs/multicheck/multicheck.css">
+    <link href="/assets/libs/datatables.net-bs4/css/dataTables.bootstrap4.css" rel="stylesheet">
     <link href="/dist/css/style.min.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -43,6 +41,7 @@
         <!-- Topbar header - style you can find in pages.scss -->
         <!-- ============================================================== -->
         <%- include("./partial/header.ejs")%>
+
         <!-- ============================================================== -->
         <!-- End Topbar header -->
         <!-- ============================================================== -->
@@ -63,7 +62,7 @@
             <div class="page-breadcrumb">
                 <div class="row">
                     <div class="col-12 d-flex no-block align-items-center">
-                        <h4 class="page-title">Form Basic</h4>
+                        <h4 class="page-title">Tables</h4>
                         <div class="ml-auto text-right">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
@@ -85,44 +84,37 @@
                 <!-- ============================================================== -->
                 <!-- Start Page Content -->
                 <!-- ============================================================== -->
-                <div class="row d-flex justify-content-center">
-                    <div class="col-md-6">
+                <div class="row">
+                    <div class="col-12">
                         <div class="card">
-                            <form class="form-horizontal" action="/category/addCategory" method="post" enctype="multipart/form-data">
-                                <div class="card-body">
-                                    <h4 class="card-title">Personal Info</h4>
-
-                                    <div class="form-group row">
-                                        <label class="col-sm-3 text-right control-label col-form-label">Category image</label>
-                                        <div class="col-md-9">
-                                            <div class="custom-file">
-                                                <input type="file" class="custom-file-input" id="validatedCustomFile" required name="categoryImage">
-                                                <label class="custom-file-label" for="validatedCustomFile">File Upload</label>
-                                                <div class="invalid-feedback">Example invalid custom file feedback</div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group row">
-                                        <label for="fname" class="col-sm-3 text-right control-label col-form-label">Category Name</label>
-                                        <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="fname" placeholder="Category name... " name="categoryName">
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="border-top">
-                                    <div class="card-body">
-                                        <button type="submit" class="btn btn-primary">Submit</button>
-                                    </div>
-                                </div>
-
-
-                            </form>
+                            <div class="card-body">
+                                <h5 class="card-title">sub category Table</h5>
+                            </div>
+                            <div class="table-responsive">
+                                <table class="table table-hover table-bordered">
+                                    <thead class="thead-dark">
+                                        <tr>
+                                            <th scope="col">#</th>
+                                            <th scope="col">Category image</th>
+                                            <th scope="col">Category name</th>
+                                            <th scope="col">Sub category name</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <% subCategory.map((e, i) => { %>
+                                            <tr>
+                                                <td><%= i + 1 %></td>
+                                                <td><img src="/<%= e.categoryId.categoryImage %>" class="img-thumbnail" width="50" alt=""></td>
+                                                <td><%= e.categoryId.categoryName %></td>
+                                                <td><%= e.subCategoryName %></td>
+                                            </tr>
+                                        <% }) %>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
-
                 <!-- ============================================================== -->
                 <!-- End PAge Content -->
                 <!-- ============================================================== -->
@@ -170,60 +162,17 @@
     <script src="/dist/js/sidebarmenu.js"></script>
     <!--Custom JavaScript -->
     <script src="/dist/js/custom.min.js"></script>
-    <!-- This Page JS -->
-    <script src="/assets/libs/inputmask/dist/min/jquery.inputmask.bundle.min.js"></script>
-    <script src="/dist/js/pages/mask/mask.init.js"></script>
-    <script src="/assets/libs/select2/dist/js/select2.full.min.js"></script>
-    <script src="/assets/libs/select2/dist/js/select2.min.js"></script>
-    <script src="/assets/libs/jquery-asColor/dist/jquery-asColor.min.js"></script>
-    <script src="/assets/libs/jquery-asGradient/dist/jquery-asGradient.js"></script>
-    <script src="/assets/libs/jquery-asColorPicker/dist/jquery-asColorPicker.min.js"></script>
-    <script src="/assets/libs/jquery-minicolors/jquery.minicolors.min.js"></script>
-    <script src="/assets/libs/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
-    <script src="/assets/libs/quill/dist/quill.min.js"></script>
+    <!-- this page js -->
+    <script src="/assets/extra-libs/multicheck/datatable-checkbox-init.js"></script>
+    <script src="/assets/extra-libs/multicheck/jquery.multicheck.js"></script>
+    <script src="/assets/extra-libs/DataTables/datatables.min.js"></script>
     <script>
-        //***********************************//
-        // For select 2
-        //***********************************//
-        $(".select2").select2();
-
-        /*colorpicker*/
-        $('.demo').each(function() {
-        //
-        // Dear reader, it's actually very easy to initialize MiniColors. For example:
-        //
-        //  $(selector).minicolors();
-        //
-        // The way I've done it below is just for the demo, so don't get confused
-        // by it. Also, data- attributes aren't supported at this time...they're
-        // only used for this demo.
-        //
-        $(this).minicolors({
-                control: $(this).attr('data-control') || 'hue',
-                position: $(this).attr('data-position') || 'bottom left',
-
-                change: function(value, opacity) {
-                    if (!value) return;
-                    if (opacity) value += ', ' + opacity;
-                    if (typeof console === 'object') {
-                        console.log(value);
-                    }
-                },
-                theme: 'bootstrap'
-            });
-
-        });
-        /*datwpicker*/
-        jQuery('.mydatepicker').datepicker();
-        jQuery('#datepicker-autoclose').datepicker({
-            autoclose: true,
-            todayHighlight: true
-        });
-        var quill = new Quill('#editor', {
-            theme: 'snow'
-        });
-
+        /****************************************
+         *       Basic Table                   *
+         ****************************************/
+        $('#zero_config').DataTable();
     </script>
+
 </body>
 
 </html>
