--- a/17] Reset password /views/extraCategoryForm.ejs
+++ b/17] Reset password /views/extraCategoryForm.ejs
@@ -88,25 +88,26 @@
                 <div class="row d-flex justify-content-center">
                     <div class="col-md-6">
                         <div class="card">
-                            <form class="form-horizontal" action="/category/addCategory" method="post" enctype="multipart/form-data">
+                            <form class="form-horizontal" action="/extraCategory/addExtraCategory" method="post">
                                 <div class="card-body">
                                     <h4 class="card-title">Personal Info</h4>
 
                                     <div class="form-group row">
-                                        <label class="col-sm-3 text-right control-label col-form-label">Category image</label>
-                                        <div class="col-md-9">
-                                            <div class="custom-file">
-                                                <input type="file" class="custom-file-input" id="validatedCustomFile" required name="categoryImage">
-                                                <label class="custom-file-label" for="validatedCustomFile">File Upload</label>
-                                                <div class="invalid-feedback">Example invalid custom file feedback</div>
-                                            </div>
+                                        <label for="fname" class="col-sm-3 text-right control-label col-form-label">Sub Category Name</label>
+                                        <div class="col-sm-9">
+                                            <input type="text" class="form-control" id="fname" placeholder="Category name... " name="extraCategoryName">
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
-                                        <label for="fname" class="col-sm-3 text-right control-label col-form-label">Category Name</label>
-                                        <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="fname" placeholder="Category name... " name="categoryName">
+                                        <label class="col-sm-3 text-right control-label col-form-label">Category name</label>
+                                        <div class="col-md-9">
+                                            <select class="select2 form-control custom-select" style="width: 100%; height:36px;" name="subCategoryId">
+                                                <option>Select</option>
+                                                <% subCategory.map((subCategory, index) => { %>
+                                                    <option value="<%= subCategory._id %>"><%= subCategory.subCategoryName %></option>
+                                                <% }) %>
+                                            </select>
                                         </div>
                                     </div>
                                 </div>
