--- a/17] Reset password /views/productForm.ejs
+++ b/17] Reset password /views/productForm.ejs
@@ -88,25 +88,51 @@
                 <div class="row d-flex justify-content-center">
                     <div class="col-md-6">
                         <div class="card">
-                            <form class="form-horizontal" action="/category/addCategory" method="post" enctype="multipart/form-data">
+                            <form class="form-horizontal" action="/product/addProduct" method="post" enctype="multipart/form-data">
                                 <div class="card-body">
                                     <h4 class="card-title">Personal Info</h4>
 
                                     <div class="form-group row">
-                                        <label class="col-sm-3 text-right control-label col-form-label">Category image</label>
+                                        <label class="col-sm-3 text-right control-label col-form-label">Product Image</label>
                                         <div class="col-md-9">
                                             <div class="custom-file">
-                                                <input type="file" class="custom-file-input" id="validatedCustomFile" required name="categoryImage">
-                                                <label class="custom-file-label" for="validatedCustomFile">File Upload</label>
+                                                <input type="file" class="custom-file-input" id="validatedCustomFile" required name="productImage">
+                                                <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
                                                 <div class="invalid-feedback">Example invalid custom file feedback</div>
                                             </div>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
-                                        <label for="fname" class="col-sm-3 text-right control-label col-form-label">Category Name</label>
+                                        <label for="fname" class="col-sm-3 text-right control-label col-form-label">Product Name</label>
                                         <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="fname" placeholder="Category name... " name="categoryName">
+                                            <input type="text" class="form-control" id="fname" placeholder="Product name... " name="productName">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <label for="fname" class="col-sm-3 text-right control-label col-form-label">Product price</label>
+                                        <div class="col-sm-9">
+                                            <input type="text" class="form-control" id="fname" placeholder="Product price... " name="productPrice">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <label for="fname" class="col-sm-3 text-right control-label col-form-label">Product description</label>
+                                        <div class="col-sm-9">
+                                            <input type="text" class="form-control" id="fname" placeholder="Product description... " name="productDescription">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <label class="col-sm-3 text-right control-label col-form-label">Extra Category name</label>
+                                        <div class="col-md-9">
+                                            <select class="select2 form-control custom-select" style="width: 100%; height:36px;" name="extraCategoryId">
+                                                <option>Select</option>
+                                                <% extraCategory.map((extraCategory, index) => { %>
+                                                    <option value="<%= extraCategory._id %>"><%= extraCategory.extraCategoryName %></option>
+                                                <% }) %>
+                                            </select>
                                         </div>
                                     </div>
                                 </div>
